# sipsdk

./: .gitignore  CMakeLists.txt  sipsdk.sln
Debug/: ParseTest.lib  sipsdk.lib  ssipsdk.lib
MethodTest/: MethodTest.vcxproj  MethodTest.vcxproj.filters  forward.cpp  methodtest.cpp  stdafx.cpp
SipTest/: SipTest.vcxproj  stdafx.cpp  unittest1.cpp
sipsdk/: Ack.cpp  Ack.h  Bye.cpp  Bye.h  ContentLength.cpp  ContentLength.h  Expires.cpp  Expires.h  Forwards.cpp  Forwards.h  From.cpp  From.h  HeaderContact.h  Invite.cpp  Invite.h  MediaAttribute.cpp  MediaAttribute.h  MediaCodec.cpp  MediaCodec.h  MediaDescription.cpp  MediaDescription.h  Options.cpp  Options.h  Register.cpp  Register.h  Request.cpp  Request.h  SdpAttributes.cpp  SdpAttributes.h  SdpConnection.cpp  SdpConnection.h  SdpHeader.cpp  SdpHeader.h  SdpOrigin.cpp  SdpOrigin.h  SdpVersion.cpp  SdpVersion.h  Sequence.cpp  Sequence.h  SessionDescription.cpp  (+35 more)
x64/Debug/: MethodTest.lib  ParseTest.lib  sipsdk.lib
